fixed jumpy loading of movies on chrome

--- a/src/movies/MoviesList/MoviesList.css
+++ b/src/movies/MoviesList/MoviesList.css
@@ -19,7 +19,6 @@
   column-gap: 120px;
   margin-bottom: 2.5rem;
   overflow: auto;
-  transition: all 0.3s ease-in-out;
 }
 
 .movie-list-item-container {
