--- a/src/movies/movieCard/MovieCard.css
+++ b/src/movies/movieCard/MovieCard.css
@@ -15,7 +15,7 @@
   color: #fff;
   box-shadow: 0px 8px 15px (0, 0, 0, 0.88);
   position: relative;
-  transition: 0.2s ease-in-out;
+  /*transition: 0.2s ease-in-out;*/
   margin-bottom: 7px;
 }
 
